# qiskit-addon-cutting

./: .buildinfo  .dockerignore  .git-blame-ignore-revs  .gitignore  .mergify.yml  .mypy.ini  .ruff.toml  CITATION.bib  CONTRIBUTING.md  Dockerfile  INSTALL.rst  LICENSE.txt  README.md  SECURITY.md  autocut.ipynb  cluster.py  compose.yaml  cutter.py  cutter_cplex.py  docker-compose.yml  evaluator.py  genindex.html  helper_fun.py  index.html  install.html  main.py  main_cplex.py  objects.inv  post_process.py  py-modindex.html  pyproject.toml  release-notes.html  sampling.py  search.html  searchindex.js  setup.py  tox.ini  verify.py
.devcontainer/: devcontainer.json
.doctrees/: environment.pickle  index.doctree  install.doctree  release-notes.doctree
.doctrees/apidocs/: circuit_cutting.doctree  entanglement_forging.doctree  index.doctree  qiskit_addon_cutting.doctree  qiskit_addon_cutting.instructions.doctree  qiskit_addon_cutting.qpd.doctree  qiskit_addon_cutting.utils.bitwise.doctree  qiskit_addon_cutting.utils.iteration.doctree  qiskit_addon_cutting.utils.observable_grouping.doctree  qiskit_addon_cutting.utils.observable_terms.doctree  qiskit_addon_cutting.utils.simulation.doctree  qiskit_addon_cutting.utils.transforms.doctree  qiskit_addon_cutting.utils.transpiler_passes.doctree  utils.doctree
.doctrees/explanation/: index.doctree
.doctrees/how-tos/: how_to_generate_exact_quasi_dists_from_sampler.doctree  how_to_generate_exact_sampling_coefficients.doctree  how_to_provide_multiple_observables.doctree  how_to_specify_cut_wires.doctree  index.doctree
.doctrees/stubs/: circuit_knitting.cutting.CuttingExperimentResults.doctree  circuit_knitting.cutting.DeviceConstraints.doctree  circuit_knitting.cutting.OptimizationParameters.doctree  circuit_knitting.cutting.PartitionedCuttingProblem.doctree  (+148 more)
.github/: dependabot.yml
_modules/: index.html
_sources/: index.rst.txt
apidocs/: circuit_cutting.html  entanglement_forging.html  index.html  qiskit_addon_cutting.html  qiskit_addon_cutting.instructions.html  qiskit_addon_cutting.qpd.html  qiskit_addon_cutting.utils.bitwise.html  qiskit_addon_cutting.utils.iteration.html  qiskit_addon_cutting.utils.observable_grouping.html  qiskit_addon_cutting.utils.observable_terms.html  qiskit_addon_cutting.utils.simulation.html  qiskit_addon_cutting.utils.transforms.html  qiskit_addon_cutting.utils.transpiler_passes.html  utils.html
circuit_knitting/: __init__.py
circuit_knitting_toolbox/: README.md  __init__.py  cutting.py
docs/: conf.py  index.rst  nitpick-exceptions  release-notes.rst
explanation/: index.html
how-tos/: how_to_generate_exact_quasi_dists_from_sampler.html  how_to_generate_exact_quasi_dists_from_sampler.ipynb  how_to_generate_exact_sampling_coefficients.html  how_to_generate_exact_sampling_coefficients.ipynb  how_to_provide_multiple_observables.html  how_to_provide_multiple_observables.ipynb  how_to_specify_cut_wires.html  how_to_specify_cut_wires.ipynb  index.html
qiskit_addon_cutting/: __init__.py  automated_cut_finding.py  cutting_decomposition.py  cutting_experiments.py  cutting_reconstruction.py  wire_cutting_transforms.py
releasenotes/: config.yaml
stubs/: circuit_knitting.cutting.CuttingExperimentResults.html  circuit_knitting.cutting.DeviceConstraints.html  circuit_knitting.cutting.OptimizationParameters.html  circuit_knitting.cutting.PartitionedCuttingProblem.html  circuit_knitting.cutting.cut_gates.html  circuit_knitting.cutting.cut_wires.html  circuit_knitting.cutting.cutqc.build.html  circuit_knitting.cutting.cutqc.cut_circuit_wires.html  circuit_knitting.cutting.cutqc.evaluate_subcircuits.html  circuit_knitting.cutting.cutqc.generate_summation_terms.html  circuit_knitting.cutting.cutqc.reconstruct_full_distribution.html  circuit_knitting.cutting.cutqc.run_subcircuit_instances.html  circuit_knitting.cutting.cutqc.verify.html  circuit_knitting.cutting.decompose_gates.html  circuit_knitting.cutting.execute_experiments.html  circuit_knitting.cutting.expand_observables.html  circuit_knitting.cutting.find_cuts.html  circuit_knitting.cutting.generate_cutting_experiments.html  circuit_knitting.cutting.instructions.CutWire.html  circuit_knitting.cutting.instructions.Move.html  circuit_knitting.cutting.partition_circuit_qubits.html  circuit_knitting.cutting.partition_problem.html  circuit_knitting.cutting.qpd.BaseQPDGate.html  circuit_knitting.cutting.qpd.QPDBasis.html  circuit_knitting.cutting.qpd.SingleQubitQPDGate.html  circuit_knitting.cutting.qpd.TwoQubitQPDGate.html  circuit_knitting.cutting.qpd.WeightType.html  circuit_knitting.cutting.qpd.decompose_qpd_instructions.html  circuit_knitting.cutting.qpd.generate_qpd_samples.html  circuit_knitting.cutting.qpd.generate_qpd_weights.html  circuit_knitting.cutting.qpd.qpdbasis_from_instruction.html  circuit_knitting.cutting.reconstruct_expectation_values.html  circuit_knitting.forging.EntanglementForgingAnsatz.html  circuit_knitting.forging.EntanglementForgingGroundStateSolver.html  circuit_knitting.forging.EntanglementForgingKnitter.html  circuit_knitting.forging.EntanglementForgingOperator.html  circuit_knitting.forging.EntanglementForgingResult.html  circuit_knitting.forging.cholesky_decomposition.html  circuit_knitting.forging.convert_cholesky_operator.html  circuit_knitting.utils.bitwise.bit_count.html  (+112 more)
test/: README.md  conftest.py  test_cutting_decomposition.py  test_cutting_roundtrip.py  test_cutting_workflows.py  test_find_cuts.py  test_wire_cutting_transforms.py
tools/: extremal-python-dependencies.py  extremal_dependency_versions.py  verify_images.py
tools/extremal-python-dependencies/: README.md  pyproject.toml
tools/extremal-python-dependencies/extremal_python_dependencies/: main.py
tutorials/: 01_gate_cutting_to_reduce_circuit_width.html  01_gate_cutting_to_reduce_circuit_width.ipynb  02_gate_cutting_to_reduce_circuit_depth.html  02_gate_cutting_to_reduce_circuit_depth.ipynb  03_wire_cutting_via_move_instruction.html  03_wire_cutting_via_move_instruction.ipynb  04_automatic_cut_finding.html  04_automatic_cut_finding.ipynb  index.html
(+895 files in other folders)
