[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circuit-knitting-toolbox"
version = "0.4.0"
description = "A software prototype for a circuit knitting toolbox which connects user applications with runtime primitives"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]

requires-python = ">=3.8"

dependencies = [
    "numpy>=1.23.0",
    "scipy>=1.5.2",
    "rustworkx>=0.12.0",
    "qiskit-aer>=0.12.0",
    "qiskit>=0.43.0",
    "qiskit-algorithms>=0.2.1",
    "qiskit-nature>=0.6.0, <0.7",
    "qiskit-ibm-runtime>=0.9.2",
]

[project.optional-dependencies]
cplex = [
    # We use the same restrictions in both of the following lines, as there
    # is no reason for us to install docplex without cplex.
    "docplex>=2.23.222; platform_machine != 'arm64'",
    "cplex>=22.1.0.0; platform_machine != 'arm64'",
]
pyscf = [
    "pyscf>=2.0.1; sys_platform != 'win32'",
]
dev = [
    "circuit-knitting-toolbox[test,nbtest,lint]",
]
basetest = [
    "pytest>=6.2.5",
    "pytest-randomly>=1.2.0",
]
test = [
    "circuit-knitting-toolbox[basetest,pyscf]",
    "ddt>=1.4.4",
]
nbtest = [
    "circuit-knitting-toolbox[basetest]",
    "nbmake>=1.3.4"
]
style = [
    "autoflake==2.2.1",
    "black[jupyter]~=23.1",
    "ruff>=0.0.246",
    "nbqa>=1.6.0",
]
lint = [
    "circuit-knitting-toolbox[style]",
    "pydocstyle==6.3.0",
    "mypy==1.5.1",
    "reno>=3.4.0",
    "pylint==2.17.7",
    # pydocstyle prefers to parse our pyproject.toml, hence the following line
    "toml",
]
docs = [
    "Sphinx>=3.0.0",
    "sphinx-autodoc-typehints>=1.12.0",
    "sphinx-reredirects",
    "jupyter-sphinx>=0.3.2",
    # The following line is needed until
    # https://github.com/jupyter/jupyter-sphinx/pull/226 is resolved.
    "ipykernel>=4.5.1",
    "nbsphinx>=0.8.8",
    "sphinx-copybutton>=0.5.0",
    "reno>=3.4.0",
    "qiskit-sphinx-theme>=1.14.0, <2"
]
notebook-dependencies = [
    "circuit-knitting-toolbox[cplex,pyscf]",
    "quantum-serverless>=0.0.7",
    "matplotlib",
    "ipywidgets",
    "pylatexenc",
]

[project.urls]
"Documentation" = "https://qiskit-extensions.github.io/circuit-knitting-toolbox/"
"Repository" = "https://github.com/Qiskit-Extensions/circuit-knitting-toolbox"

[tool.hatch.build.targets.wheel]
only-include = [
    "circuit_knitting",
    "circuit_knitting_toolbox",
]

[tool.autoflake]
remove-unused-variables = true
remove-all-unused-imports = true

#[tool.coverage.run]
#omit = [
#    # deprecated import location(s)
#    "circuit_knitting/path/to/deprecated/module",
#]

[tool.pytest.ini_options]
testpaths = ["./circuit_knitting/", "./test/"]
filterwarnings = ["ignore:::.*qiskit.opflow*"]
addopts = "--doctest-modules -rs --durations=10"
