[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circuit-knitting-toolbox"
version = "0.7.1"
description = "A software prototype for a circuit knitting toolbox which connects user applications with runtime primitives"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

requires-python = ">=3.8"

dependencies = [
    "numpy>=1.23.0",
    "scipy>=1.5.2",
    "rustworkx>=0.14.0",
    "qiskit-aer>=0.14.0.1",
    "qiskit>=1.0.0, <2.0",
    "qiskit-ibm-runtime>=0.23.0",
]

[project.optional-dependencies]
cplex = [
    # We use the same restrictions in both of the following lines, as there
    # is no reason for us to install docplex without cplex.
    "docplex>=2.23.222; python_version < '3.12' and platform_machine != 'arm64'",
    "cplex>=22.1.0.0; python_version < '3.12' and platform_machine != 'arm64'",
]
dev = [
    "circuit-knitting-toolbox[test,nbtest,lint]",
]
basetest = [
    "pytest>=6.2.5",
    "pytest-randomly>=1.2.0",
]
test = [
    "circuit-knitting-toolbox[basetest]",
    "ddt>=1.4.4",
]
nbtest = [
    "circuit-knitting-toolbox[basetest]",
    "nbmake>=1.4.3"
]
style = [
    "autoflake==2.3.1",
    "black[jupyter]~=24.1",
    "ruff>=0.0.246",
    "nbqa>=1.6.0",
]
lint = [
    "circuit-knitting-toolbox[style]",
    "pydocstyle==6.3.0",
    "mypy==1.10.0",
    "reno>=3.4.0",
    "pylint==3.1.0",
    # pydocstyle prefers to parse our pyproject.toml, hence the following line
    "toml",
]
docs = [
    "Sphinx>=3.0.0",
    "sphinx-autodoc-typehints>=1.12.0",
    "sphinx-reredirects",
    "jupyter-sphinx>=0.3.2",
    "nbsphinx>=0.8.8",
    "sphinx-copybutton>=0.5.0",
    "reno>=3.4.0",
    "qiskit-sphinx-theme>=1.14.0, <2"
]
notebook-dependencies = [
    "circuit-knitting-toolbox[cplex]",
    "matplotlib",
    "ipywidgets",
    "pylatexenc",
]

[project.urls]
"Documentation" = "https://qiskit-extensions.github.io/circuit-knitting-toolbox/"
"Repository" = "https://github.com/Qiskit-Extensions/circuit-knitting-toolbox"

[tool.hatch.build.targets.wheel]
only-include = [
    "circuit_knitting",
]

[tool.autoflake]
remove-unused-variables = true
remove-all-unused-imports = true

[tool.pylint.main]
py-version = "3.8"
disable = "all"
enable = [
    "reimported",
    "no-self-use",
    "no-else-raise",
    "redefined-argument-from-local",
    "redefined-builtin",
    "raise-missing-from",
    "cyclic-import",
    "unused-argument",
    "use-list-literal",
    "use-dict-literal",
    "dangerous-default-value",
]

#[tool.coverage.run]
#omit = [
#    # deprecated import location(s)
#    "circuit_knitting/path/to/deprecated/module",
#]

[tool.pytest.ini_options]
testpaths = ["./circuit_knitting/", "./test/"]
filterwarnings = ["ignore:::.*qiskit.opflow*"]
addopts = "--doctest-modules -rs --durations=10 --ignore=circuit_knitting/utils/metrics.py --ignore=circuit_knitting/cutting/cutqc"
