[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qiskit-addon-cutting"
version = "0.10.0"
description = "Reduce width and depth of quantum circuits by cutting gates and wires."
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]

requires-python = ">=3.9"

dependencies = [
    "numpy>=1.23.0",
    "scipy>=1.5.4",
    "rustworkx>=0.15.0",
    "qiskit-aer>=0.14.0.1",
    "qiskit>=1.3.1, <3",
    "qiskit-ibm-runtime>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "qiskit-addon-cutting[test,nbtest,lint]",
]
basetest = [
    "pytest>=6.2.5",
    "pytest-randomly>=1.2.0",
]
test = [
    "qiskit-addon-cutting[basetest]",
    "ddt>=1.4.4",
]
nbtest = [
    "qiskit-addon-cutting[basetest]",
    "nbmake>=1.4.3"
]
style = [
    "autoflake==2.3.1",
    "black[jupyter]~=25.1",
    "ruff==0.9.9",
    "nbqa>=1.6.0",
]
lint = [
    "qiskit-addon-cutting[style]",
    "mypy==1.15.0",
    "reno>=3.4.0",
    "pylint==3.3.4",
    "numpy<2.2",
]
docs = [
    "Sphinx>=3.0.0",
    "sphinx-autodoc-typehints>=1.12.0",
    "sphinx-reredirects",
    "jupyter-sphinx>=0.3.2",
    "nbsphinx>=0.8.8",
    "sphinx-copybutton>=0.5.0",
    "reno>=3.4.0",
    "qiskit-sphinx-theme>=2.0.0, <3"
]
notebook-dependencies = [
    "matplotlib",
    "ipywidgets",
    "pylatexenc",
]

[project.urls]
"Documentation" = "https://qiskit.github.io/qiskit-addon-cutting/"
"Repository" = "https://github.com/Qiskit/qiskit-addon-cutting"

[tool.hatch.build.targets.wheel]
only-include = [
    "qiskit_addon_cutting",
]

[tool.autoflake]
remove-unused-variables = true
remove-all-unused-imports = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
extend-select = ["D"]
ignore = [
    "E501",  # line too long
]

[tool.ruff.lint.per-file-ignores]
"test/**.py" = [
    "F405",  # star import
    "F403",  # unable to detect undefined names due to star import
    "D",     # pydocstyle
]
"docs/**" = [
    "E402",  # module level import not at top of file
    "D100",  # missing docstring in public module
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pylint.main]
py-version = "3.9"
disable = "all"
enable = [
    "reimported",
    "no-self-use",
    "no-else-raise",
    "redefined-argument-from-local",
    "redefined-builtin",
    "raise-missing-from",
    "cyclic-import",
    "unused-argument",
    "use-list-literal",
    "use-dict-literal",
    "dangerous-default-value",
]

[tool.mypy]
ignore_missing_imports = true

#[tool.coverage.run]
#omit = [
#    # deprecated import location(s)
#    "qiskit_addon_cutting/path/to/deprecated/module",
#]

[tool.pytest.ini_options]
testpaths = ["./qiskit_addon_cutting/", "./test/"]
addopts = "--doctest-modules -rs --durations=10"
